--- a/fishing_technique.html
+++ b/fishing_technique.html
@@ -39,8 +39,6 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
-<link href="site_libs/quarto-contrib/social-share-0.1.0/social-share.css" rel="stylesheet">
-<link href="site_libs/quarto-contrib/social-share-0.1.0/all.css" rel="stylesheet">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -138,6 +136,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <p>I fish upstream for a few reasons. First, as the name suggests, I fish with dry flies if at all possible, though this is changing a little bit (see below). I think the “float” or presentation of the dry fly is more natural when you cast upstream and let it float back to you, rather than casting downstream and have it float away from you. Maybe this is only because of my own poor technique fishing downstream, but I feel like trying to feed line as a fly floats downstream just looks less natural.</p>
 <p>Second, fish almost always face upstream into the current. When you approach downstream, the fish are looking away from you and are less likely to spook. This is probably not as big of an issue on larger rivers, but most of my fishing is done on small rivers and creeks where the fish can easily see you if you get too close to their field of vision. A valid counterpoint to this is that if you cast upstream, the fish see the line, leader, and tippet go over their field of vision before they see the fly. If you cast downstream (and the fish face upstream), they see the fly first. This must be true, but I don’t think the fish care much about seeing line in the water, and I think they care a lot about seeing a person moving around. It’s also the case that often when wading you stir up dirt and debris and this can cause off-color water to move downstream. If you’re fishing upstream this is irrelevant because the fish will never know.</p>
 <p>Finally, if a fish takes the fly and you’re downstream of the fish, when you set the fly you are setting it back into the fish’s mouth which produces a better hook set and makes it more likely you land the fish. If you’re fishing downstream, setting the hook pulls the fly away from the fish’s mouth and toward the angler, increasing the chances you’ll simply pull the fly out of the fish’s mouth.</p>
+<p>Also, it’s harder to net a fish by bringing it upstream to you because you’re fighting the current, which makes it more likely you’ll break your trippet. Easier to bring it downstream toward you.</p>
 <p>The only exception to my fishing upstream rule is when I use a streamer. My streamer technique is standard and basic: I cast across and down, or just down if the water is narrow, and pull the line back toward me by hand (without reeling in). I almost never fish this way however, because I stink at this technique. I’m sure I’ve caught fewer than five trout on a streamer.</p>
 </section>
 <section id="cast-short" class="level4">
@@ -296,7 +295,6 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script>
 </div> <!-- /content -->
-<div class="page-columns page-rows-contents page-layout-article"><div class="social-share"><a href="https://twitter.com/share?url=https://doctordryfly.com&amp;text=page" target="_blank" class="twitter"><i class="fab fa-twitter fa-fw fa-lg"></i></a><a href="https://www.linkedin.com/shareArticle?url=https://doctordryfly.com&amp;title=page" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin-in fa-fw fa-lg"></i></a>  <a href="mailto:?subject=page&amp;body=Check out this link:https://doctordryfly.com" target="_blank" class="email"><i class="fa-solid fa-envelope fa-fw fa-lg"></i></a><a href="https://www.facebook.com/sharer.php?u=https://doctordryfly.com" target="_blank" class="facebook"><i class="fab fa-facebook-f fa-fw fa-lg"></i></a><a href="https://reddit.com/submit?url=https://doctordryfly.com&amp;title=page" target="_blank" class="reddit">   <i class="fa-brands fa-reddit-alien fa-fw fa-lg"></i></a><a href="https://www.stumbleupon.com/submit?url=https://doctordryfly.com&amp;title=page" target="_blank" class="stumbleupon"><i class="fa-brands fa-stumbleupon fa-fw fa-lg"></i></a><a href="https://www.tumblr.com/share/link?url=https://doctordryfly.com&amp;name=page" target="_blank" class="tumblr"><i class="fa-brands fa-tumblr fa-fw fa-lg"></i></a><a href="javascript:void(0);" onclick="var mastodon_instance=prompt('Mastodon Instance / Server Name?'); if(typeof mastodon_instance==='string' &amp;&amp; mastodon_instance.length){this.href='https://'+mastodon_instance+'/share?text=page https://doctordryfly.com'}else{return false;}" target="_blank" class="mastodon"><i class="fa-brands fa-mastodon fa-fw fa-lg"></i></a></div></div>
 
 
 
