--- a/fishing_history.html
+++ b/fishing_history.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Doctor Dry Fly - My Fly Fishing History</title>
+<title>Doctor Dry Fly - About Me</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -39,8 +39,6 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
-<link href="site_libs/quarto-contrib/social-share-0.1.0/social-share.css" rel="stylesheet">
-<link href="site_libs/quarto-contrib/social-share-0.1.0/all.css" rel="stylesheet">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -91,8 +89,16 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link" href="./fishing_overview.qmd">
- <span class="menu-text">Main</span></a>
+    <a class="nav-link" href="./fishing_landing.html">
+ <span class="menu-text">Fly Fishing in the West</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./adventures_landing.html">
+ <span class="menu-text">Other Adventures</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link active" href="./fishing_history.html" aria-current="page">
+ <span class="menu-text">About and Contact</span></a>
   </li>  
 </ul>
               <div id="quarto-search" class="" title="Search"></div>
@@ -112,7 +118,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">My Fly Fishing History</h1>
+<h1 class="title">About Me</h1>
 </div>
 
 
@@ -127,7 +133,8 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 </header>
 
-<p>I haven’t been fly fishing for that long; I grew up in Southern California which is not exactly a hotbed of trout fishing. I occasionally rod-and-reel fished when camping in the Sierras and in school at the University of Colorado. It was only when I moved to Utah in 2016 that I began serious fly fishing. It helps that I had a skilled mentor who taught me his style. My first summer of fly fishing, I mostly didn’t catch a thing, and I got so frustrated I kind of gave up one it.</p>
+<p>I haven’t been fly fishing for all that long; I grew up in Southern California which is not exactly a hotbed of trout streams. I occasionally rod-and-reel fished when camping in the Sierra and when I went off to college in the Mountain West. It was only when I moved to Utah in 2016 that I began seriously fly fishing. My first summer of fly fishing, I mostly didn’t catch a thing, and I got so frustrated I stopped fishing for awhile. Luckily, I knew a skilled mentor who spent time teaching me his style and techniques. It wasn’t immediate, but eventually I was able to catch fish consistently on the fly.</p>
+<p>For any questions about anything on this website, please <a href="mailto:doctordryfly@gmail.com">contact me here.</a></p>
 
 
 
@@ -266,7 +273,6 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script>
 </div> <!-- /content -->
-<div class="page-columns page-rows-contents page-layout-article"><div class="social-share"><a href="https://twitter.com/share?url=https://doctordryfly.com&amp;text=page" target="_blank" class="twitter"><i class="fab fa-twitter fa-fw fa-lg"></i></a><a href="https://www.linkedin.com/shareArticle?url=https://doctordryfly.com&amp;title=page" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin-in fa-fw fa-lg"></i></a>  <a href="mailto:?subject=page&amp;body=Check out this link:https://doctordryfly.com" target="_blank" class="email"><i class="fa-solid fa-envelope fa-fw fa-lg"></i></a><a href="https://www.facebook.com/sharer.php?u=https://doctordryfly.com" target="_blank" class="facebook"><i class="fab fa-facebook-f fa-fw fa-lg"></i></a><a href="https://reddit.com/submit?url=https://doctordryfly.com&amp;title=page" target="_blank" class="reddit">   <i class="fa-brands fa-reddit-alien fa-fw fa-lg"></i></a><a href="https://www.stumbleupon.com/submit?url=https://doctordryfly.com&amp;title=page" target="_blank" class="stumbleupon"><i class="fa-brands fa-stumbleupon fa-fw fa-lg"></i></a><a href="https://www.tumblr.com/share/link?url=https://doctordryfly.com&amp;name=page" target="_blank" class="tumblr"><i class="fa-brands fa-tumblr fa-fw fa-lg"></i></a><a href="javascript:void(0);" onclick="var mastodon_instance=prompt('Mastodon Instance / Server Name?'); if(typeof mastodon_instance==='string' &amp;&amp; mastodon_instance.length){this.href='https://'+mastodon_instance+'/share?text=page https://doctordryfly.com'}else{return false;}" target="_blank" class="mastodon"><i class="fa-brands fa-mastodon fa-fw fa-lg"></i></a></div></div>
 
 
 
