--- a/fishing_landing.html
+++ b/fishing_landing.html
@@ -96,6 +96,10 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
     <a class="nav-link" href="./adventures_landing.html">
  <span class="menu-text">Other Adventures</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./fishing_history.html">
+ <span class="menu-text">About and Contact</span></a>
+  </li>  
 </ul>
               <div id="quarto-search" class="" title="Search"></div>
           </div> <!-- /navcollapse -->
