--- a/fishing_history.html
+++ b/fishing_history.html
@@ -133,7 +133,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 </header>
 
-<p>I haven’t been fly fishing for all that long; I grew up in Southern California which is not exactly a hotbed of trout streams. I occasionally rod-and-reel fished when camping in the Sierra and when I went off to college in the Mountain West. It was only when I moved to Utah in 2016 that I began seriously fly fishing. My first summer of fly fishing, I mostly didn’t catch a thing, and I got so frustrated I stopped fishing for awhile. Luckily, I knew a skilled mentor who spent time teaching me his style and techniques. It wasn’t immediate, but eventually I was able to catch fish consistently on the fly.</p>
+<p>I haven’t been fly fishing for all that long; I grew up in Southern California which is not exactly a hotbed of trout streams. I occasionally rod-and-reel fished when camping in the Sierra and when I went off to college in the Mountain West. It was only when I moved to Utah in 2016 that I began seriously fly fishing. My first summer of fly fishing I mostly didn’t catch a thing, and I got so frustrated I stopped fishing for awhile. Luckily, I knew a skilled mentor who spent time teaching me his style and techniques. It wasn’t immediate, but eventually I was able to catch fish consistently on the fly.</p>
 <p>For any questions about anything on this website, please <a href="mailto:doctordryfly@gmail.com">contact me here.</a></p>
 
 
