--- a/fishing_landing.html
+++ b/fishing_landing.html
@@ -121,7 +121,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
   <li><a href="#wyoming-cutt-slam" id="toc-wyoming-cutt-slam" class="nav-link" data-scroll-target="#wyoming-cutt-slam">Wyoming Cutt Slam</a></li>
   <li><a href="#nevada-native-fish-slam" id="toc-nevada-native-fish-slam" class="nav-link" data-scroll-target="#nevada-native-fish-slam">Nevada Native Fish Slam</a></li>
   <li><a href="#california-heritage-trout-challenge" id="toc-california-heritage-trout-challenge" class="nav-link" data-scroll-target="#california-heritage-trout-challenge">California Heritage Trout Challenge</a></li>
-  <li><a href="#western-native-trout-challenge-completed-write-up-coming-soon" id="toc-western-native-trout-challenge-completed-write-up-coming-soon" class="nav-link" data-scroll-target="#western-native-trout-challenge-completed-write-up-coming-soon">Western Native Trout Challenge (completed, write-up coming soon)</a></li>
+  <li><a href="#western-native-trout-challenge" id="toc-western-native-trout-challenge" class="nav-link" data-scroll-target="#western-native-trout-challenge">Western Native Trout Challenge</a></li>
   </ul></li>
   <li><a href="#other-waters" id="toc-other-waters" class="nav-link" data-scroll-target="#other-waters">Other Waters</a>
   <ul class="collapse">
@@ -169,8 +169,8 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <section id="california-heritage-trout-challenge" class="level3">
 <h3 class="anchored" data-anchor-id="california-heritage-trout-challenge"><a href="./california_heritage_slam.html">California Heritage Trout Challenge</a></h3>
 </section>
-<section id="western-native-trout-challenge-completed-write-up-coming-soon" class="level3">
-<h3 class="anchored" data-anchor-id="western-native-trout-challenge-completed-write-up-coming-soon">Western Native Trout Challenge (completed, write-up coming soon)</h3>
+<section id="western-native-trout-challenge" class="level3">
+<h3 class="anchored" data-anchor-id="western-native-trout-challenge"><a href="./western_native.html">Western Native Trout Challenge</a></h3>
 </section>
 </section>
 <section id="other-waters" class="level2">
