--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <h2 class="anchored" data-anchor-id="other-adventures"><a href="./adventures_landing.html">Other Adventures</a></h2>
 <p>From time to time I do other things besides fly fishing.</p>
 <ul>
-<li><p>Tequila Tasting in Mexico</p></li>
-<li><p>Oktoberfest in Germany</p></li>
+<li><p>Tequila Tasting in Tequila, Mexico</p></li>
+<li><p>Oktoberfest in Munich, Germany</p></li>
 <li><p>Hiking the O in Patagonia</p></li>
 </ul>
 
