--- a/fishing_technique.html
+++ b/fishing_technique.html
@@ -96,6 +96,10 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
     <a class="nav-link" href="./adventures_landing.html">
  <span class="menu-text">Other Adventures</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./fishing_history.html">
+ <span class="menu-text">About and Contact</span></a>
+  </li>  
 </ul>
               <div id="quarto-search" class="" title="Search"></div>
           </div> <!-- /navcollapse -->
@@ -129,7 +133,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 </header>
 
-<p>Every angler has their own style, techniques, and preferred ways of doing things. Mine is simply the result of how I learned to fly fish, and adjustments that I’ve made over the years. None of my advice or descriptions are meant to be prescriptive as I’m a big believer in learning to fish your own fish (borrowed from the expression, “hike your own hike”), but I think understanding some basic, fundamental strategies are helpful, especially for new anglers.</p>
+<p>Every angler has their own style, techniques, and preferred ways of doing things. Mine are simply the result of how I learned to fly fish, and adjustments that I’ve made over the years. None of my advice or descriptions are meant to be prescriptive as I’m a big believer in learning to fish your own fish (borrowed from the expression, “hike your own hike”), but I think understanding some basic, fundamental strategies are helpful, especially for new anglers.</p>
 <section id="fish-upstream" class="level4">
 <h4 class="anchored" data-anchor-id="fish-upstream">Fish Upstream</h4>
 <p>I fish upstream about 99% of the time. That is, I begin downstream of wherever I think my endpoint will be, and work upstream. If I’m finishing along a road and park in a turnout, I usually fish upstream from my car, then walk back downstream on the road when I’m finished. I do this because I believe most anglers walk downstream from their car, then fish upstream back to their car. If people consistently park in the same turnout, the stretch of water downstream of the car will see more pressure than that upstream, and I always want to fish water with less fishing pressure.</p>
