--- a/waters_directory.html
+++ b/waters_directory.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Doctor Dry Fly - Fly Fishing</title>
+<title>Doctor Dry Fly - Waters Directory</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -89,7 +89,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link active" href="./fishing_landing.html" aria-current="page">
+    <a class="nav-link" href="./fishing_landing.html">
  <span class="menu-text">Fly Fishing in the West</span></a>
   </li>  
   <li class="nav-item">
@@ -111,24 +111,14 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <!-- sidebar -->
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">On this page</h2>
-   
-  <ul>
-  <li><a href="#slams" id="toc-slams" class="nav-link active" data-scroll-target="#slams">Slams</a></li>
-  <li><a href="#waters-directory" id="toc-waters-directory" class="nav-link" data-scroll-target="#waters-directory">Waters Directory</a>
-  <ul class="collapse">
-  <li><a href="#fishing-patagonia-march-2023" id="toc-fishing-patagonia-march-2023" class="nav-link" data-scroll-target="#fishing-patagonia-march-2023">Fishing Patagonia (March 2023)</a></li>
-  </ul></li>
-  </ul>
-</nav>
+        
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Fly Fishing</h1>
+<h1 class="title">Waters Directory</h1>
 </div>
 
 
@@ -143,43 +133,33 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 </header>
 
-<section id="slams" class="level2">
-<h2 class="anchored" data-anchor-id="slams">Slams</h2>
-<p>Utah introduced its cutt slam shortly after I (finally) learned how to consistently catch fish on the fly, and I was immediately intrigued by the concept. It forced me to learn more about the fish I was catching, explore waters I normally wouldn’t, and challenge myself by learning new techniques to tackle new waters.</p>
-<p>While I extensively researched the places I’d fish for my challenge, I was frustrated with a lot of the information I read from other sources. I found most websites to be long on fish pictures and short on details. This made things difficult because I was unsure how to prepare, what kinds of flies to use (though I think this is largely overrated), and what kind of water I’d be fishing. In some cases I couldn’t figure out where or how to access the streams.</p>
-<p>The most important thing for me when fishing is to have a positive experience: good fishing, small crowds, nice scenery. And, for most of us, it isn’t feasible to drive four or five hours to a fishing spot, only to realize that there isn’t public access or the creek is full of brook trout. As a result, this site is short on pictures but, I hope, long on details. I mostly skip the grip-and-grin fish pictures, and focus on the water and scenery. When researching my own slams I wanted to know what the water looked like to get a sense of its size and type. In general, I know what fish look like.</p>
-<!--#I think a lot of websites imply that anglers have unlimited time and money to catch fish. I don't have a boat, I don't know anyone with private water, and I have a full time job.-->
-<p>N.B.: I know it’s considered by many to be problematic to post locations of good fishing spots, but all the waters described here can be found on the state wildlife agency websites, on other personal websites, and in many Youtube videos, so I’m not giving away any secrets. Also, most of these spots (with a few exceptions) are not exactly blue ribbon, 20-inch fish, trout streams. The vast majority of waters I have fished, especially in Utah and Nevada, are small and brushy with small fish. I write about the Logan and other Cache Valley rivers in greater detail because these are my local fishing spots, but the Logan is already well-known as high quality fly fishing river. A google search for “Logan River fishing” shows the first two results are from visitUtah.com and Utah.com. I hope this information is valuable for others interested in fly fishing and pursuing native trout challenges.</p>
-<p>I also want to note that I receive no compensation from this website, and none of the products I recommend or equipment I use are sponsored.</p>
-<p>A summary of my completed and in progress slams can be found here. I provide details on where and how I caught my fish. Unless otherwise noted, all fish were caught on dry flies and released. I am in the process of creating this website, so more information will become available as I update.</p>
-<section id="utah-cutthroat-slam" class="level4">
-<h4 class="anchored" data-anchor-id="utah-cutthroat-slam"><a href="./utah_cutt_slam.html">Utah Cutthroat Slam</a></h4>
-</section>
-<section id="wyoming-cutt-slam" class="level4">
-<h4 class="anchored" data-anchor-id="wyoming-cutt-slam"><a href="./wyoming_cutt_slam.html">Wyoming Cutt Slam</a></h4>
-</section>
-<section id="nevada-native-fish-slam" class="level4">
-<h4 class="anchored" data-anchor-id="nevada-native-fish-slam"><a href="./nevada_fish_slam.html">Nevada Native Fish Slam</a></h4>
-</section>
-<section id="california-heritage-trout-challenge" class="level4">
-<h4 class="anchored" data-anchor-id="california-heritage-trout-challenge"><a href="./california_heritage_slam.html">California Heritage Trout Challenge</a></h4>
-</section>
-<section id="western-native-trout-challenge" class="level4">
-<h4 class="anchored" data-anchor-id="western-native-trout-challenge"><a href="./western_native.html">Western Native Trout Challenge</a></h4>
-</section>
-</section>
-<section id="waters-directory" class="level2">
-<h2 class="anchored" data-anchor-id="waters-directory"><a href="./waters_directory.html">Waters Directory</a></h2>
-<p>Alphabetical list of all waters described on this website.</p>
-<section id="fishing-patagonia-march-2023" class="level3">
-<h3 class="anchored" data-anchor-id="fishing-patagonia-march-2023">Fishing Patagonia (March 2023)</h3>
-<!--#Backpacking Setup-->
-<!--#Catch a fish every month for a year-->
-<!--#slams: arizona, new mexico, nebraska, virginia, missouri, west virginia kind of-->
+<ul>
+<li><p>Blacksmith Fork and Left Hand Fork Blacksmith Fork, UT (<a href="./utah_cutt_slam.html">see Utah Cutt Slam</a>)</p></li>
+<li><p>Big Wood River, ID (<a href="./western_native.html">see Western Native Trout Challenge</a>)</p></li>
+<li><p>Coeur d’Alene River and North Fork Coeur d’Alene, ID (<a href="./western_native.html">see Western Native Trout Challenge</a>)</p></li>
+<li><p>Copper Creek, MT (<a href="./western_native.html">see Western Native Trout Challenge</a>)</p></li>
+<li><p>Curtis Creek, UT (<a href="./utah_cutt_slam.html">see Utah Cutt Slam</a>)</p></li>
+<li><p>Logan River and Right Hand Fork Logan River, UT (<a href="./utah_cutt_slam.html">see Utah Cutt Slam</a>)</p></li>
+<li><p>Greybull River, WY (<a href="./wyoming_cutt_slam.html">see Wyoming Cutt Slam</a>)</p></li>
+<li><p>Greys River, WY (<a href="./wyoming_cutt_slam.html">see Wyoming Cutt Slam</a>)</p></li>
+<li><p>Goose Creek, NV (<a href="./nevada_fish_slam.html">see Nevada Native Fish Slam</a>)</p></li>
+<li><p>Jarbidge River, NV (<a href="./nevada_fish_slam.html">see Nevada Native Fish Slam</a>)</p></li>
+<li><p>Marys River, NV (<a href="./nevada_fish_slam.html">see Nevada Native Fish Slam</a>)</p></li>
+<li><p>Mill Creek, UT (<a href="./utah_cutt_slam.html">see Utah Cutt Slam</a>)</p></li>
+<li><p>North Cottonwood Creek, WY (<a href="./wyoming_cutt_slam.html">see Wyoming Cutt Slam</a>)</p></li>
+<li><p>North Piney Creek, WY (<a href="./wyoming_cutt_slam.html">see Wyoming Cutt Slam</a>)</p></li>
+<li><p>Onemile Creek, UT (<a href="./utah_cutt_slam.html">see Utah Cutt Slam</a>)</p></li>
+<li><p>Pine Creek, UT (<a href="./utah_cutt_slam.html">see Utah Cutt Slam</a>)</p></li>
+<li><p>Rock Creek, UT (<a href="./utah_cutt_slam.html">see Utah Cutt Slam</a>)</p></li>
+<li><p>Sawmill Canyon, UT (<a href="./utah_cutt_slam.html">see Utah Cutt Slam</a>)</p></li>
+<li><p>Spawn Creek, UT (<a href="./utah_cutt_slam.html">see Utah Cutt Slam</a>)</p></li>
+<li><p>South Leigh Creek, WY (<a href="./utah_cutt_slam.html">see Utah Cutt Slam</a>)</p></li>
+<li><p>T Creek, NV (<a href="./nevada_fish_slam.html">see Nevada Native Fish Slam</a>)</p></li>
+<li><p>Temple Creek, UT (<a href="./utah_cutt_slam.html">see Utah Cutt Slam</a>)</p></li>
+<li><p>Trout Creek, NV (<a href="./nevada_fish_slam.html">see Nevada Native Fish Slam</a>)</p></li>
+</ul>
 
 
-</section>
-</section>
 
 </main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
